test/classes/initializers/phase1/badDependence2.good
badDependence2.chpl:5: In initializer:
badDependence2.chpl:2: error: field "f5" used before it is initialized
